2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Portability.xml,
	doc/ns-MoMA.Analyzer.MoMAWebService.xml,
	doc/MoMA.Analyzer.MoMAWebService, doc/Gendarme.Rules.Portability: With
	the new code in the Makefiles we don't need to keep the documentation
	files in the repository.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs: Add XML documentation. Use OpCodeEngine
	to avoid executing the rule unless an LDSTR instruction is present.
	* ExitCodeIsLimitedOnUnixRule.cs: Add XML documentation. Use 
	OpCodeEngine to avoid executing the rule unless Call[virt] 
	instructions are present inside the method.
	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Add XML documentation.
	Use OpCodeEngine to avoid executing the rule unless Call[virt] or 
	NewObj instructions are present inside the method.
	* MonoCompatibilityReviewRule.cs: Add XML documentation. Use
	OpCodeEngine to avoid executing the rule unless it can reference
	a type or method not available, or incomplete, inside Mono.
	* NewLineLiteralRule.cs: Add XML documentation. Use OpCodeEngine 
	to avoid executing the rule unless an LDSTR instruction is present.

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Don't check Ping if
	Process was found earlier (the call goes to a single place). Rename
	some variables to please rules (self-test).

2008-08-24  Sebastien Pouliot  <sebastien@ximian.com>

	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Override Initialize
	to be able to detect both Process and Ping. Turn off the rule is both
	are not used in a module, otherwise just look for the one(s) present.

2008-08-11  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs: Fix case where we can't resolve the