@@ -1,5 +1,10 @@
 2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>
 
+	* Makefile.am: Added support for generating the documentation files to
+	the build process.
+
+2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>
+
 	* doc/index.xml, doc/ns-Gendarme.Rules.Portability.xml,
 	doc/ns-MoMA.Analyzer.MoMAWebService.xml,
 	doc/MoMA.Analyzer.MoMAWebService, doc/Gendarme.Rules.Portability: With
